<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etMessage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/h1"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/bsSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_toRightOf="@+id/etMessage"
        android:layout_alignBaseline="@+id/etMessage"
        android:text="@string/b1"
        />

    <Button
        android:id="@+id/bviVoice"
        android:layout_width="164dp"
        android:layout_height="47dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="548dp"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:layout_below="@+id/etMessage"
        android:text="@string/b2" />
</RelativeLayout>