<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contactDetails">

    <Button
        android:id="@+id/bcConfirm"
        android:layout_centerHorizontal="true"
        android:layout_width="142dp"
        android:layout_height="54dp"
        android:layout_marginBottom="520dp"
        android:text="@string/b3"
        android:layout_below="@+id/etContact"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        />

    <EditText
        android:id="@+id/etContact"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:ems="10"
        android:hint="@string/h2"
        android:inputType="textVisiblePassword"
        />

</RelativeLayout>